--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3607,3 +3607,9 @@ body.ie .ibg img {
   }
 }
 
+.bg-grey {
+  margin: 0;
+  padding: 35px 35px 35px 35px;
+  background-color: rgb(238, 238, 238);
+  min-height: 100vh;
+}
